make the game run at all, replace broken calls with `#FIXME`s

--- a/mods/ws_achievements/mod.conf
+++ b/mods/ws_achievements/mod.conf
@@ -1,4 +1,4 @@
 name = ws_achievements
 description = Achievement system for Wastelands Survival with GUI notifications
-depends = default, ws_story
+depends = ws_story
 optional_depends = mobs, farming, dewcollector
